--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@ GrandTour.tupel
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-RUS-Compatible' content='IE=edge'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Info</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
